<resources>
    <string name="app_name">Kotlin BoilerPlate Sample</string>
    <string name="image_description">Background image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_msg_no_connectivity">Please check your internet connection</string>
    <string name="error_msg_empty_username">Please enter username</string>
    <string name="error_msg_empty_password">Please enter password</string>
    <string name="error_msg_invalid_password">"Password must be between 8 and 40 characters "</string>
    <string name="dashboard">Dashboard</string>
    <string name="err_msg">Something went wrong</string>
    <string name="logout">Logout</string>
    <string name="homework">Homework</string>
    <string name="msg_success">Login successful</string>
    <string name="notification_title">Kotlin Demo</string>
    <string name="settings">Settings</string>
    <string name="photo_gallery">Photo Gallery</string>
</resources>
