<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="login"
            type="com.theonetech.kotlin.presentation.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".presentation.view.LoginActivity"
        android:id="@+id/rlMainLayout">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_100sdp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_below="@+id/image_logo"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_10sdp">

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:autofillHints="@string/username"
                android:inputType="text"
                android:padding="@dimen/_10sdp" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_username"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:autofillHints="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:onClick="@{(v)->login.performOnClick(v)}"
                android:text="@string/login"
                android:textColor="@color/colorBlack" />

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleSmall"
            android:theme="@style/progressColor"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>